@startuml

class Users {
    - String user_id
    - String user_name
    - String full_name
    - String phone_number
    - String email_address
    - String password
    - Integer age
    - String gender
    - Integer current_event_id
    - Integer current_group_id
    - String user_status

    + registerUser(): String
    + loginUser(): Boolean
    + logoutUser(): Void
    + updateUserProfile(): Boolean
    + getUserProfile(): Users
    + deleteUserAccount(): Boolean
    + joinEvent(): Boolean
    + leaveEvent(): Boolean
    + createGroup() : Boolean
    + joinGroup(): Boolean
    + leaveGroup(): Boolean
    + updateUserStatus(): Boolean
    + displayLocationInfo(): LocationData
    + changePassword(): Boolean
}

class Admins {
    - String user_id
    - String user_name
    - String password
    - String full_name
    - String email_address

    + loginUser(): Boolean
    + logoutUser(): Void
    + changePassword(): Boolean
    + viewUserDetails(): Users
    + deleteUserDetails(): Boolean
}

class Companies {
    - String company_id
    - String company_name
    - String company_password
    - String address
    - String phone_number
    - String email_address

    + registerCompany() : String
}

class Events {
    - String company_id
    - String event_id
    - String event_name
    - String password
    - String start_time
    - String end_time
    - String location
    - String event_content

    + createEvent(): String
    + updateEvent(): Boolean
    + deleteEvent(): Boolean
    + getEventDetails(): Events
}

class LocationData {
    - String user_id
    - Float latitude
    - Float longitude
    - Float current_altitude
    - String acquisition_time
    - String user_stats

    + updateLocationData(): Boolean
    + getLocationData(): LocationData
}

class LocationHistory {
    - String user_id
    - Float latitude
    - Float longitude
    - Float altitude
    - String acquisition_time
    - String user_status

    + saveLocationHistory(): Boolean
    + getLocationHistory(): List<LocationHistory>
}

class Messages {
    - String message_id
    - String sender_user_id
    - String reciver_user_id
    - String message_content
    - String sent_time

    + sendMessage(): Boolean
    + getMessageHistory(): List<Messages>
}

class Groups {
    - String group_id
    - String password
    - String user_id
    - String creation_date
    - Integer max_members
    - Integer current_members
    - String event_id

    + createGroup(): String
    + addMember(): Boolean
    + updateGroupInfo(): Boolean
}

' 関連（has-a 関係）
Users "1" -- "0..*" Groups
Users "1" -- "0..*" Events
Users "1" -- "0..*" Messages
Users "1" -- "0..1" LocationData
Users "1" -- "0..*" LocationHistory

Groups "0..*" -- "0..*" Users
Groups "1" -- "0..*" Events

Companies "1" -- "0..*" Events
Companies "1" -- "0..*" CompaniesEmployee

Events "1" -- "0..*" Messages
@enduml
